--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 </head>
 <body>
   <header>
-    <h1>Classic Skincare Shop</h1>
+    <h1>Glowy Skincare Shop</h1>
   </header>
 
   <nav>
@@ -95,19 +95,19 @@
 
   <div class="products">
     <div class="product">
-      <img src="https://via.placeholder.com/200" alt="Product 1">
+      <img src="c:\xampp\htdocs\ecommerce\cleasingoil.png" alt="Product 1">
       <h3>Gentle Cleanser</h3>
       <p>$12.99</p>
       <button onclick="showModal('Gentle Cleanser')">Add to Cart</button>
     </div>
     <div class="product">
-      <img src="https://via.placeholder.com/200" alt="Product 2">
+      <img src="c:\xampp\htdocs\ecommerce\laneige.png" alt="Product 2">
       <h3>Hydrating Moisturizer</h3>
       <p>$18.50</p>
       <button onclick="showModal('Hydrating Moisturizer')">Add to Cart</button>
     </div>
     <div class="product">
-      <img src="https://via.placeholder.com/200" alt="Product 3">
+      <img src="c:\xampp\htdocs\ecommerce\sun.png" alt="Product 3">
       <h3>Sunscreen SPF 30</h3>
       <p>$14.00</p>
       <button onclick="showModal('Sunscreen SPF 30')">Add to Cart</button>
