--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <button onclick="showModal('Hydrating Moisturizer')">Add to Cart</button>
     </div>
     <div class="product">
-      <img src="\photo3.jpg.png" alt="Product 3">
+      <img src="\photo3.jpg" alt="Product 3">
       <h3>Sunscreen SPF 30</h3>
       <p>$14.00</p>
       <button onclick="showModal('Sunscreen SPF 30')">Add to Cart</button>
