--- a/index.html
+++ b/index.html
@@ -95,19 +95,19 @@
 
   <div class="products">
     <div class="product">
-      <img src="\photo1.jpg" alt="Product 1">
+      <img src="\photo1.png" alt="Product 1">
       <h3>Gentle Cleanser</h3>
       <p>$12.99</p>
       <button onclick="showModal('Gentle Cleanser')">Add to Cart</button>
     </div>
     <div class="product">
-      <img src="\photo2.jpg" alt="Product 2">
+      <img src="\photo2.png" alt="Product 2">
       <h3>Hydrating Moisturizer</h3>
       <p>$18.50</p>
       <button onclick="showModal('Hydrating Moisturizer')">Add to Cart</button>
     </div>
     <div class="product">
-      <img src="\photo3.jpg" alt="Product 3">
+      <img src="\photo3.png" alt="Product 3">
       <h3>Sunscreen SPF 30</h3>
       <p>$14.00</p>
       <button onclick="showModal('Sunscreen SPF 30')">Add to Cart</button>
